--- a/web/src/app/features/public/public-layout/public-layout.component.html
+++ b/web/src/app/features/public/public-layout/public-layout.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col">
-  <nav class="bg-white border-b border-gray-200 w-full top-0 z-50">
+  <nav class="bg-white fixed border-b border-gray-200 w-full top-0 z-50">
     <div class="max-w-full px-4 sm:px-6">
       <div class="flex justify-between items-center h-16">
         <div
