feat(web): add base layout for downloads page

--- a/web/src/app/features/public/downloads/downloads.page.html
+++ b/web/src/app/features/public/downloads/downloads.page.html
@@ -1,1 +1,55 @@
-<p>downloads works!</p>
+<div class="min-h-screen bg-white">
+  <section class="flex flex-col items-center text-center px-8 py-16 lg:py-24">
+    <h1 class="tr-title-1 leading-tight mb-4">
+      Experience <span class="text-primary">Triggo</span> on the Go
+    </h1>
+    <p class="tr-subtitle mb-8">
+      Download the Triggo app now and take control of your workflows from
+      anywhere. <br />
+      Available on iOS and Android.
+    </p>
+
+    <div class="flex space-x-4 mb-16 w-full max-w-lg">
+      <button
+        trBtn
+        class="flex flex-row items-center justify-center flex-1"
+        size="lg">
+        <img
+          ngSrc="icons/apple_icon.svg"
+          alt="App Store Icon"
+          width="17"
+          height="17"
+          class="mr-2" />
+        <span>Download for iOS</span>
+      </button>
+
+      <button
+        trBtn
+        class="flex flex-row items-center justify-center flex-1"
+        size="lg">
+        <img
+          ngSrc="icons/android_icon.svg"
+          alt="App Store Icon"
+          width="22"
+          height="22"
+          class="mr-2" />
+        <span>Download for Android</span>
+      </button>
+    </div>
+
+    <div class="flex justify-center space-x-4">
+      <img
+        src="assets/mockup-1.png"
+        alt="Phone Mockup 1"
+        class="w-40 md:w-48 lg:w-52 rounded-lg shadow-md" />
+      <img
+        src="assets/mockup-2.png"
+        alt="Phone Mockup 2"
+        class="w-40 md:w-48 lg:w-52 rounded-lg shadow-md" />
+      <img
+        src="assets/mockup-3.png"
+        alt="Phone Mockup 3"
+        class="w-40 md:w-48 lg:w-52 rounded-lg shadow-md" />
+    </div>
+  </section>
+</div>
