--- a/web/src/app/features/public/downloads/downloads.page.html
+++ b/web/src/app/features/public/downloads/downloads.page.html
@@ -1,15 +1,16 @@
-<div class="min-h-screen bg-white">
-  <section class="flex flex-col items-center text-center px-8 py-16 lg:py-24">
-    <h1 class="tr-title-1 leading-tight mb-4">
+<div class="min-h-screen bg-white overflow-hidden">
+  <section
+    class="flex flex-col items-center text-center px-8 py-16 lg:py-24">
+    <h1 class="tr-title-1 leading-tight mb-4  z-10 ">
       Experience <span class="text-primary">Triggo</span> on the Go
     </h1>
-    <p class="tr-subtitle mb-8">
+    <p class="tr-subtitle mb-8 relative z-10">
       Download the Triggo app now and take control of your workflows from
       anywhere. <br />
       Available on iOS and Android.
     </p>
 
-    <div class="flex space-x-4 mb-16 w-full max-w-lg">
+    <div class="flex space-x-4 mb-16 w-full max-w-lg relative z-10">
       <button
         trBtn
         class="flex flex-row items-center justify-center flex-1"
@@ -37,19 +38,12 @@
       </button>
     </div>
 
-    <div class="flex justify-center space-x-4">
-      <img
-        src="assets/mockup-1.png"
-        alt="Phone Mockup 1"
-        class="w-40 md:w-48 lg:w-52 rounded-lg shadow-md" />
-      <img
-        src="assets/mockup-2.png"
-        alt="Phone Mockup 2"
-        class="w-40 md:w-48 lg:w-52 rounded-lg shadow-md" />
-      <img
-        src="assets/mockup-3.png"
-        alt="Phone Mockup 3"
-        class="w-40 md:w-48 lg:w-52 rounded-lg shadow-md" />
-    </div>
+    <img
+      ngSrc="images/mobile_app.png"
+      alt="Phone Mockup 1"
+      class="w-[85%] sm:w-[70%] md:w-[65%] lg:w-[60%] xl:w-[50%] 2xl:w-[45%] absolute bottom-0"
+      width="600"
+      height="800"
+      priority />
   </section>
 </div>
