--- a/web/src/app/features/integrations/openai/openai-link-form/openai-link-form.component.html
+++ b/web/src/app/features/integrations/openai/openai-link-form/openai-link-form.component.html
@@ -1,18 +1,37 @@
 <div
   class="w-full p-6 flex flex-col items-center space-y-4 bg-secondary rounded-md">
-  <div class="w-full max-w-md space-y-4">
+  <form
+    class="w-full max-w-md space-y-4"
+    (ngSubmit)="link()"
+    [formGroup]="openaiForm">
     <div>
-      <label for="apiKey" class="block font-medium mb-1">API Key</label>
-      <input trInput id="apiKey" type="text" class="w-full bg-white" />
+      <label trLabel for="apiKey" class="block font-medium mb-1">API Key</label>
+      <input
+        trInput
+        id="apiKey"
+        type="text"
+        class="w-full bg-white"
+        [formControl]="openaiForm.controls.apiToken" />
     </div>
 
     <div>
-      <label for="adminApiKey" class="block font-medium mb-1"
+      <label trLabel for="adminApiKey" class="block font-medium mb-1"
         >Admin API Key</label
       >
-      <input trInput id="adminApiKey" type="text" class="w-full bg-white" />
+      <input
+        trInput
+        id="adminApiKey"
+        type="text"
+        class="w-full bg-white"
+        [formControl]="openaiForm.controls.adminApiToken" />
     </div>
 
-    <button trBtn class="w-full">Link Account</button>
-  </div>
+    <button trBtn class="w-full" type="submit" [disabled]="loading()">
+      @if (loading()) {
+        <tr-spinner size="sm" />
+      } @else {
+        Link
+      }
+    </button>
+  </form>
 </div>
