feat(web): add openai integration list card

--- a/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
+++ b/web/src/app/features/integrations/components/integration-linked/integration-linked-card.component.html
@@ -12,5 +12,11 @@
         [iconUri]="iconUri()"
         [color]="color()" />
     }
+    @case (IntegrationTypeEnum.OPENAI) {
+      <tr-integration-linked-openai
+        [integration]="integration()"
+        [iconUri]="iconUri()"
+        [color]="color()" />
+    }
   }
 </div>
