--- a/web/src/app/features/automations/workspace/automations-workspace.page.html
+++ b/web/src/app/features/automations/workspace/automations-workspace.page.html
@@ -1,5 +1,5 @@
 <div class="flex flex-row items-center gap-6 h-full w-full">
-  <div class="min-h-full flex flex-col space-y-3 w-[83%]">
+  <div class="min-h-full flex flex-col space-y-3 w-full">
     @if (automation$ | async; as automation) {
       <div class="flex flex-row items-center gap-3">
         <div
@@ -14,18 +14,9 @@
       </div>
       <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
         <div class="flex flex-col">
-          @for (action of this.steps; track action) {
-            <tr-action-card [label]="action" />
-            @if (!$last) {
-              <div
-                class="border-r-4 border-secondary-foreground p-3.5 w-[50%] border-dashed"></div>
-            }
-          }
+          <tr-trigger-card [trigger]="automation.trigger" />
         </div>
       </div>
     }
-  </div>
-  <div class="w-[17%] h-full pt-2.5">
-    <tr-context-menu />
   </div>
 </div>
