--- a/web/src/app/features/automations/workspace/automations-workspace.page.html
+++ b/web/src/app/features/automations/workspace/automations-workspace.page.html
@@ -15,6 +15,9 @@
       <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
         <div class="flex flex-col">
           <tr-trigger-card [trigger]="automation.trigger" />
+          @for (action of automation.actions; track action.identifier) {
+            <tr-action-card [action]="action" />
+          }
         </div>
       </div>
     }
