feat(web): add layout for automation workspace

--- a/web/src/app/features/integrations/components/integration-add-dialog/integration-add-dialog.component.html
+++ b/web/src/app/features/integrations/components/integration-add-dialog/integration-add-dialog.component.html
@@ -51,7 +51,9 @@
                 height="35"
                 class="object-contain"
                 [style.filter]="
-                  forceWhite(selectedIntegration()!) ? 'brightness(0) invert(1)' : 'none'
+                  forceWhite(selectedIntegration()!)
+                    ? 'brightness(0) invert(1)'
+                    : 'none'
                 " />
             </div>
             <h1 class="tr-title-3">
