--- a/web/src/app/features/automations/workspace/automations-workspace.page.html
+++ b/web/src/app/features/automations/workspace/automations-workspace.page.html
@@ -13,10 +13,16 @@
         <h1 class="tr-title-2">{{ automation.label }}</h1>
       </div>
       <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
-        <div class="flex flex-col">
-          <tr-trigger-card [trigger]="automation.trigger" />
+        <div class="flex flex-col w-full items-center gap-5">
+          <tr-trigger-card [trigger]="automation.trigger" class="w-full" />
+          @if (!automation.actions.length) {
+            <tr-add-step-button />
+          }
           @for (action of automation.actions; track action.identifier) {
-            <tr-action-card [action]="action" />
+            <tr-action-card [action]="action" class="w-full" />
+            @if ($last) {
+              <tr-add-step-button />
+            }
           }
         </div>
       </div>
