--- a/web/src/app/features/automations/workspace/components/trigger-card/trigger-card.component.html
+++ b/web/src/app/features/automations/workspace/components/trigger-card/trigger-card.component.html
@@ -10,7 +10,9 @@
       border: color() ? '3px solid ' + color() : 'none',
     }">
     @if (icon()) {
-      <div [style.background-color]="color()" class="p-2 flex items-center justify-center rounded-md">
+      <div
+        [style.background-color]="color()"
+        class="p-2 flex items-center justify-center rounded-md">
         <ng-icon [name]="icon()!" size="1.5rem" class="text-white" />
       </div>
     }
