--- a/web/src/app/features/automations/workspace/automations-workspace.page.html
+++ b/web/src/app/features/automations/workspace/automations-workspace.page.html
@@ -11,15 +11,23 @@
             color="white" />
         </div>
         <h1 class="tr-title-2">{{ automation.label }}</h1>
+        <button trBtn class="ml-auto w-16" variant="outline">
+          <ng-icon name="heroCog6Tooth" size="1.4rem" />
+        </button>
+        <button trBtn class="w-32">Save</button>
       </div>
       <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
-        <div class="flex flex-col w-full items-center gap-5">
+        <div class="flex flex-col w-full items-center">
           <tr-trigger-card [trigger]="automation.trigger" class="w-full" />
+          <div
+            class="border-r-4 border-secondary-foreground h-[1.6rem] w-[0rem] border-dashed box-content"></div>
           @if (!automation.actions.length) {
             <tr-add-step-button />
           }
           @for (action of automation.actions; track action.identifier) {
             <tr-action-card [action]="action" class="w-full" />
+            <div
+              class="border-r-4 border-secondary-foreground h-[1.6rem] w-[0rem] border-dashed box-content"></div>
             @if ($last) {
               <tr-add-step-button />
             }
