--- a/web/src/app/features/automations/workspace/components/trigger-card/trigger-card.component.html
+++ b/web/src/app/features/automations/workspace/components/trigger-card/trigger-card.component.html
@@ -1,6 +1,6 @@
 @if (!trigger()) {
   <div
-    class="p-3 rounded-md flex items-center justify-center bg-accent border-dashed border-2 border-black hover:cursor-pointer hover:bg-accent/50">
+    class="p-5 rounded-md flex items-center justify-center bg-accent border-dashed border-2 transition-all hover:border-solid hover:border-primary hover:text-primary border-black hover:cursor-pointer">
     <span class="tr-container-title">Add a Trigger Event</span>
   </div>
 } @else {
