feat(web): add select trigger in the sheet component

--- a/web/src/app/features/automations/listing/components/automation-card/automation-card.component.html
+++ b/web/src/app/features/automations/listing/components/automation-card/automation-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-white p-4 rounded-md hover:cursor-pointer hover:bg-accent"
+  class="bg-white p-4 rounded-md hover:cursor-pointer hover:bg-accent transition-colors hover:text-primary"
   [routerLink]="['/automations/workspace', automation().id]">
   <div class="flex justify-between flex-row items-center">
     <div class="flex items-center gap-3">
