--- a/web/src/app/features/automations/workspace/automations-workspace.page.html
+++ b/web/src/app/features/automations/workspace/automations-workspace.page.html
@@ -17,7 +17,9 @@
     </div>
     <div class="flex-grow bg-secondary rounded-md overflow-auto p-4">
       <div class="flex flex-col w-full items-center">
-        <tr-trigger-card [trigger]="automation().trigger" class="w-full" />
+        <tr-select-trigger-sheet
+          class="w-full"
+          [trigger]="automation().trigger" />
         @if (automation().trigger) {
           <div
             class="border-r-4 border-secondary-foreground h-[1.6rem] w-[0rem] border-dashed box-content"></div>
