feat(web): add available integration in the trigger selection

--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/integration-selection/integration-selection.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/integration-selection/integration-selection.component.html
@@ -1,3 +1,8 @@
 <div class="flex flex-col">
   <tr-input-search placeholder="Search for an integration" />
+  <div class="flex flex-col">
+    @for (integration of availableIntegrations(); track integration.identifier) {
+      <span>{{integration.name}}</span>
+    }
+  </div>
 </div>
