--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
@@ -7,26 +7,28 @@
       <h3 trSheetTitle>Edit Trigger</h3>
       <span trSheetDescription>Edit the trigger for this automation</span>
     </tr-sheet-header>
-    @switch (selectionStep()) {
-      @case (TriggerSelectionStep.MAIN) {
-        <div class="grid gap-4">
-          <div>
-            <span class="tr-large">Select Integration</span>
-            <button
-              trBtn
-              class="w-full text-left items-center justify-start gap-1"
-              variant="outline"
-              (click)="selectIntegration()">
-              <ng-icon name="heroBolt" size="1.1rem" />
-              No Integration Selected
-            </button>
+    <div class="h-full">
+      @switch (selectionStep()) {
+        @case (TriggerSelectionStep.MAIN) {
+          <div class="grid gap-4">
+            <div>
+              <span class="tr-large">Select Integration</span>
+              <button
+                trBtn
+                class="w-full text-left items-center justify-start gap-1"
+                variant="outline"
+                (click)="selectIntegration()">
+                <ng-icon name="heroBolt" size="1.1rem" />
+                No Integration Selected
+              </button>
+            </div>
           </div>
-        </div>
+        }
+        @case (TriggerSelectionStep.INTEGRATION) {
+          <tr-integration-selection class="h-full" />
+        }
       }
-      @case (TriggerSelectionStep.INTEGRATION) {
-        <tr-integration-selection />
-      }
-    }
+    </div>
     <div class="mt-auto flex flex-row justify-end">
       @if (selectionStep() === TriggerSelectionStep.MAIN) {
         <button trBtn type="submit" class="w-[50%]">Save</button>
