--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/integration-selection/integration-selection.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/integration-selection/integration-selection.component.html
@@ -1,16 +1,19 @@
 <div class="flex flex-col h-full">
-  <tr-input-search placeholder="Search for an integration" class="mb-3"/>
+  <tr-input-search
+    placeholder="Search for an integration"
+    class="mb-3"
+    (input)="onSearch($event)" />
   <div class="flex flex-col bg-secondary rounded-md p-4 space-y-2 flex-grow">
     @for (
-      integration of availableIntegrations();
+      integration of filteredIntegrations();
       track integration.identifier
     ) {
-      <tr-available-integration-list-card class="w-full"
+      <tr-available-integration-list-card
+        class="w-full"
         [color]="integration.color"
         [name]="integration.name"
         [iconUri]="integration.iconUri"
-        [forceWhite]="forceWhite(integration)"
-      />
+        [forceWhite]="forceWhite(integration)" />
     }
   </div>
 </div>
