--- a/web/src/app/components/available-integration-list-card/available-integration-list-card.component.html
+++ b/web/src/app/components/available-integration-list-card/available-integration-list-card.component.html
@@ -1,13 +1,16 @@
-<button trBtn variant="outline" class="flex flex-row gap-2 w-full justify-start bg-white p-6 px-3">
+<button
+  trBtn
+  variant="outline"
+  class="flex flex-row gap-2 w-full justify-start bg-white p-6 px-3">
   <div
     class="w-8 h-8 rounded-md flex flex-col items-center justify-center"
-    [ngStyle]="{ 'background-color': color() }">
+    [ngStyle]="{ 'background-color': integration().color }">
     <img
-      [ngSrc]="iconUri()"
+      [ngSrc]="integration().iconUri"
       alt="Integration Logo"
       [width]="20"
       [height]="20"
       [style.filter]="forceWhite() ? 'brightness(0) invert(1)' : 'none'" />
   </div>
-  <span>{{ name() }}</span>
+  <span>{{ integration().name }}</span>
 </button>
