--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/integration-selection/integration-selection.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/integration-selection/integration-selection.component.html
@@ -4,16 +4,11 @@
     class="mb-3"
     (input)="onSearch($event)" />
   <div class="flex flex-col bg-secondary rounded-md p-4 space-y-2 flex-grow">
-    @for (
-      integration of filteredIntegrations();
-      track integration.identifier
-    ) {
+    @for (integration of filteredIntegrations(); track integration.identifier) {
       <tr-available-integration-list-card
         class="w-full"
-        [color]="integration.color"
-        [name]="integration.name"
-        [iconUri]="integration.iconUri"
-        [forceWhite]="forceWhite(integration)" />
+        [integration]="integration"
+        (click)="selectIntegration(integration)" />
     }
   </div>
 </div>
