--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/select-trigger-sheet.component.html
@@ -8,39 +8,39 @@
       <span trSheetDescription>Edit the trigger for this automation</span>
     </tr-sheet-header>
     <div class="h-full">
-      @switch (stateGroup().selectionStep) {
+      @switch (service.state().selectionStep) {
         @case (TriggerSelectionStep.MAIN) {
           <div>
             <span class="tr-large">Select Integration</span>
-            @if (!stateGroup().selectedIntegration) {
+            @if (!service.state().selectedIntegration) {
               <button
                 trBtn
                 class="w-full text-left items-center justify-start gap-1"
                 variant="outline"
-                (click)="goToIntegrationSelection()">
+                (click)="service.goToIntegrationSelection()">
                 <ng-icon name="heroBolt" size="1.1rem" />
                 No Integration Selected
               </button>
             } @else {
               <tr-available-integration-list-card
                 class="w-full"
-                [integration]="stateGroup().selectedIntegration!"
-                (click)="goToIntegrationSelection()" />
+                [integration]="service.state().selectedIntegration!"
+                (click)="service.goToIntegrationSelection()" />
             }
           </div>
         }
         @case (TriggerSelectionStep.INTEGRATION) {
           <tr-integration-selection
             class="h-full"
-            (selectedIntegration)="selectIntegration($event)" />
+            (selectedIntegration)="service.selectIntegration($event)" />
         }
       }
     </div>
     <div class="mt-auto flex flex-row justify-end">
-      @if (stateGroup().selectionStep === TriggerSelectionStep.MAIN) {
+      @if (service.state().selectionStep === TriggerSelectionStep.MAIN) {
         <button trBtn type="submit" class="w-[50%]">Save</button>
       } @else {
-        <button trBtn class="w-[50%]" variant="outline" (click)="back()">
+        <button trBtn class="w-[50%]" variant="outline" (click)="service.back()">
           Back
         </button>
       }
