feat(web): add linked integration selection

--- a/web/src/app/features/automations/workspace/components/integration-selection/integration-selection.component.html
+++ b/web/src/app/features/automations/workspace/components/integration-selection/integration-selection.component.html
@@ -3,7 +3,7 @@
     placeholder="Search for an integration"
     class="mb-3"
     (input)="onSearch($event)" />
-  <div class="flex flex-col bg-secondary rounded-md p-4 space-y-2 flex-grow">
+  <div class="flex flex-col bg-secondary rounded-md space-y-3 p-3 flex-grow">
     @for (integration of filteredIntegrations(); track integration.identifier) {
       <tr-available-integration-list-card
         class="w-full"
