--- a/web/src/app/components/available-integration-button/available-integration-button.component.html
+++ b/web/src/app/components/available-integration-button/available-integration-button.component.html
@@ -1,16 +1,16 @@
 <button
   trBtn
   variant="outline"
-  class="flex flex-row gap-2 w-full justify-start bg-white p-6 px-3">
+  class="flex flex-row gap-2 w-full justify-start bg-white p-8 px-3">
   <div
-    class="w-8 h-8 rounded-md flex flex-col items-center justify-center"
+    class="w-10 h-10 rounded-md flex flex-col items-center justify-center"
     [ngStyle]="{ 'background-color': integration().color }">
     <img
       [ngSrc]="integration().iconUri"
       alt="Integration Logo"
-      [width]="20"
-      [height]="20"
+      [width]="24"
+      [height]="24"
       [style.filter]="forceWhite() ? 'brightness(0) invert(1)' : 'none'" />
   </div>
-  <span>{{ integration().name }}</span>
+  <span class="tr-large">{{ integration().name }}</span>
 </button>
