feat(web): add trigger selection base

--- a/web/src/app/components/linked-integration-button/linked-integration-button.component.html
+++ b/web/src/app/components/linked-integration-button/linked-integration-button.component.html
@@ -1,7 +1,7 @@
 <button
   trBtn
   variant="outline"
-  class="flex flex-col items-start bg-white w-full justify-center p-8"
+  class="flex flex-col items-start bg-white w-full justify-center p-8 px-4"
   (click)="selectIntegration()">
   <span class="tr-large">{{ header() }}</span>
   <span class="text-muted tr-medium">{{ subheader() }}</span>
