--- a/web/src/app/features/automations/workspace/components/select-trigger-sheet/trigger-selection/trigger-selection.component.html
+++ b/web/src/app/features/automations/workspace/components/select-trigger-sheet/trigger-selection/trigger-selection.component.html
@@ -1,1 +1,13 @@
-<p>trigger-selection works!</p>
+<div class="flex flex-col h-full">
+  <div class="flex-grow bg-secondary rounded-md">
+    <div class="flex flex-col p-3 space-y-3">
+      @for (trigger of availableTriggers(); track trigger.name) {
+        <tr-trigger-selection-button
+          [trigger]="trigger"
+          (click)="selectTrigger(trigger)" />
+      } @empty {
+        <span class="text-center text-gray-400">No triggers available</span>
+      }
+    </div>
+  </div>
+</div>
